--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>typerank</title>
+  <style>
+    body {
+      background-color: #08001a;
+    }
+  </style>
 </head>
 
 <body>
